--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -2,8 +2,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/Profile"
+        android:id="@+id/Search"
         android:title="Profile"
-        android:icon="@drawable/ic_profile"
+        android:icon="@drawable/ic_search"
         app:showAsAction="ifRoom"/>
 </menu>
